# django-snippets-db

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
example/: dev.db  settings.py  urls.py  wsgi.py
example/templates/snippets/: navbar.html
snippets/: __init__.py  admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
snippets/templates/snippets/: snippet_detail.html  snippet_list.html
snippets/templates/snippets/snippets/: search.html
src/snippets/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/snippets/migrations/: 0002_fix_snippet_timestamps.py
src/snippets/templates/snippets/snippets/: search.html
