[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-snippets-db"
dynamic = ["version"]
description = "Reusable Django app for storing and serving reusable code snippets."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Rangertaha", email = "rangertaha@gmail.com" },
]
keywords = ["django", "snippets", "code", "rest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.17",
]

[project.optional-dependencies]
example = [
    "django-bootstrap3>=26.1",
]

[project.urls]
Homepage = "https://github.com/Rangertaha/django-snippets-db"
Repository = "https://github.com/Rangertaha/django-snippets-db"
Issues = "https://github.com/Rangertaha/django-snippets-db/issues"
Changelog = "https://github.com/Rangertaha/django-snippets-db/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "coverage>=7",
    "mypy>=1",
    "ruff>=0.15",
]

[tool.hatch.version]
path = "src/snippets/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/snippets"]
exclude = ["src/snippets/tests.py"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["src/snippets/migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    # null=True on string fields: fixing requires a schema migration
    # (behavior-changing); tracked as a follow-up.
    "DJ001",
]

[tool.mypy]
python_version = "3.12"
files = ["src/snippets"]
exclude = ["migrations"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true

[tool.coverage.run]
source = ["snippets"]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["*/migrations/*", "*/tests.py"]
